Adding pytest directory

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -62,7 +62,7 @@ jobs:
       
       # Run django tests
       - name: Run django tests
-        run: python manage.py test
+        run: python DjangoWebApp/manage.py test
 
       # Logs the completed build-and-test
       - name: Log successful build
