--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -58,7 +58,9 @@ jobs:
       ## Django specific steps ##
       # Make django migrations
       - name: Run django migrations
-        run: python DjangoWebApp/manage.py migrate
+        run:  |
+          python DjangoWebApp/manage.py makemigrations
+          python DjangoWebApp/manage.py migrate
       
       # Run django tests
       - name: Run django tests
